--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,9 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@400;600&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+    max-width: 100vw;
+    overflow-x: hidden;
+    font-family: 'Baloo Tamma 2', cursive;
+    line-height: 2;
+}
+
+@layer base {
+    h1, h2, h3, h4, h5, h6 {
+        @apply font-black font-semibold;
+    }
+    h1{
+         @apply text-4xl;
+    }
+    h2 {
+        @apply text-3xl;
+    }
+    h3, h4 {
+        @apply text-2xl;
+    }
+    h5, h6 {
+        @apply text-xl;
+    }
+    body {
+        @apply bg-pastelOrange
+    }
 }
