--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@300;400;600&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -14,7 +14,7 @@ body {
 
 @layer base {
     h1, h2, h3, h4, h5, h6 {
-        @apply font-black font-semibold;
+        @apply font-black;
     }
     h1{
          @apply text-4xl;
@@ -31,4 +31,20 @@ body {
     body {
         @apply bg-pastelOrange
     }
+}
+
+.openMenu {
+    @apply w-full h-screen bg-pastelOrange z-30 text-2xl
+}
+
+.openMenu a {
+    @apply block py-5 text-center
+}
+
+.pageTitle {
+    @apply p-5 mt-5
+}
+
+.gradient-background{
+   background: linear-gradient(180deg, rgba(217, 217, 217, 0) 10.94%, rgba(120, 119, 119, .6 ) 98.44%);
 }
