--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,13 +8,13 @@ html,
 body {
     max-width: 100vw;
     overflow-x: hidden;
-    font-family: 'Baloo Tamma 2', cursive;
+    font-family: 'Baloo Tamma 2', sans-serif;
     line-height: 2;
 }
 
 @layer base {
     h1, h2, h3, h4, h5, h6 {
-        @apply font-black;
+        @apply font-black my-2;
     }
     h1{
          @apply text-4xl;
@@ -31,6 +31,27 @@ body {
     body {
         @apply bg-pastelOrange
     }
+    p {
+        @apply py-1 font-light
+    }
+
+    blockquote {
+        @apply w-full relative my-3
+    }
+    blockquote p{
+        @apply text-xl text-center p-3
+    }
+
+    blockquote cite {
+        @apply text-right font-light text-neutral-500 text-base block
+    }
+
+    a {
+        @apply text-primary
+    }
+}
+.layout {
+    @apply mx-auto relative w-full lg:w-3/4 xl:w-1/3
 }
 
 .openMenu {
